[package]
name = "ja_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
bpaf = { version = "0.7.10", features = ["derive", "bright-color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0.0"
html2text = { version ="0.5.1", feature = ["ansi_colours"] }
termion = "2.0.1"
async-trait = "0.1.68"
rpassword = "7.2.0"
